--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "42.2",
-  "version": "1.4.5",
-  "description": "42.2 build on django",
-  "repository": "https://git.broj42.com/broj42/42.2.git",
+  "name": "prostoria",
+  "version": "1.4.0",
+  "description": "Prostoria build on Django",
+  "repository": "https://git.broj42.com/broj42/prostoria.git",
   "scripts": {
     "build:assets": "gulp assets",
     "build:html": "gulp html",
@@ -15,48 +15,47 @@
     "rewrite": "node _scripts/rewrite",
     "serve": "gulp serve",
     "start": "npm-run-all clean:* build:assets --parallel watch:*",
-    "watch:gulp": "wait-on dist/public/js && gulp",
+    "watch:gulp": "wait-on dist/js && gulp",
     "watch:js": "webpack --watch"
   },
   "author": "Ivan Čurić",
   "license": "ISC",
   "dependencies": {
-    "angled-edges": "^2.0.0",
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-imports": "^1.4.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-env": "^1.6.0",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.12",
     "browserslist": "^2.1.5",
-    "chalk": "^1.1.3",
+    "chalk": "^2.0.1",
     "cross-env": "^5.0.1",
     "css-mqpacker": "^6.0.1",
     "cssnano": "^3.10.0",
-    "eslint": "^4.1.1",
+    "eslint": "^4.0.0",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "fast-glob": "^1.0.1",
     "file-extension": "^3.1.2",
+    "flickity": "^2.0.8",
+    "fontfaceobserver": "^2.0.13",
     "fs-extra": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
-    "gulp-edit-xml": "^2.0.0",
     "gulp-flatmap": "^1.0.0",
-    "gulp-foreach": "^0.1.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
@@ -65,7 +64,6 @@
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-svgmin": "^1.2.4",
     "gulp-template": "^4.0.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
@@ -76,13 +74,12 @@
     "postcss-assets": "^4.1.0",
     "postcss-flexbugs-fixes": "^3.0.0",
     "postcss-inline-svg": "^3.0.0",
-    "preact": "^8.1.0",
-    "preact-svg-loader": "^0.1.0",
     "prettier": "^1.5.2",
-    "prettier-eslint": "^6.4.1",
+    "prettier-eslint": "^6.4.2",
     "raw-loader": "^0.5.1",
-    "run-sequence": "^1.2.2",
+    "run-sequence": "^2.0.0",
     "sanitize.css": "^5.0.0",
+    "skeleton-loader": "^1.1.3",
     "stylefmt": "^6.0.0",
     "stylelint": "^7.12.0",
     "stylelint-config-standard": "^16.0.0",
@@ -90,9 +87,8 @@
     "svgo-loader": "^1.2.1",
     "url-search-params": "^0.9.0",
     "wait-on": "^2.0.2",
-    "wallop": "^2.4.1",
     "webpack": "^3.0.0",
-    "webpack-clean-obsolete-chunks": "^0.1.10",
+    "webpack-clean-obsolete-chunks": "^0.1.9",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-notifier": "^1.5.0",
     "whatwg-fetch": "^2.0.3",
